--- a/second.html
+++ b/second.html
@@ -16,7 +16,8 @@
 
     <p>
         Here are some of the paintings I have painted. This watercolor painting is the first painting I made when I was 10.
-        Working with an instructor, I drew the landscape, adding color and depth after using an image of the scene as inspiration.
+        Working with an instructor, I drew the landscape, adding color and depth after 
+        using an image of the scene as inspiration.
     </p>
 
     <a href="https://ibb.co/rKmhc2gF"><img src="https://i.ibb.co/wZRqwhTB/IMG-4807.jpg" alt="IMG-4807" border="0" width = "500"></a>
